[gd_scene load_steps=11 format=3 uid="uid://ixynyknlcm7r"]

[ext_resource type="Texture2D" uid="uid://enjbqy8ok17j" path="res://assets/UI/BtnNormal.png" id="1_x5jff"]
[ext_resource type="Texture2D" uid="uid://d341lydc1fpka" path="res://assets/UI/BtnBuy.png" id="2_kpv2i"]
[ext_resource type="Texture2D" uid="uid://3d7y6c0iv7ew" path="res://assets/UI/BtnDisabled.png" id="3_t1aak"]
[ext_resource type="Texture2D" uid="uid://tbqgtm5wqn0p" path="res://assets/Items/alcohol.png" id="4_dr7to"]
[ext_resource type="Script" path="res://scripts/itemSlot.gd" id="4_ygww5"]
[ext_resource type="Texture2D" uid="uid://41n26cc5ue5v" path="res://assets/UI/coinNum.png" id="5_o8rct"]
[ext_resource type="Theme" uid="uid://cxtop7574to8s" path="res://assets/Textures/itemName.tres" id="6_fajgw"]
[ext_resource type="Theme" uid="uid://6h8smvrr5cte" path="res://assets/Textures/itemDes.tres" id="7_cp3gu"]
[ext_resource type="Theme" uid="uid://b6beyruaaqeg0" path="res://assets/Textures/costLbl.tres" id="8_exla2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yflb1"]
load_path = "res://.godot/imported/itemPanel.png-c2643dc204ab457b8e46040dca28dbbe.ctex"

[node name="itemSlot" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_x5jff")
texture_pressed = ExtResource("2_kpv2i")
texture_hover = ExtResource("1_x5jff")
texture_disabled = ExtResource("3_t1aak")
script = ExtResource("4_ygww5")

[node name="ItemPanel" type="Sprite2D" parent="."]
position = Vector2(64, 50)
scale = Vector2(0.761905, 0.76506)
texture = SubResource("CompressedTexture2D_yflb1")

[node name="itemIcon" type="TextureRect" parent="ItemPanel"]
offset_left = -31.0
offset_top = -34.0
offset_right = 32.0
offset_bottom = 28.0
texture = ExtResource("4_dr7to")

[node name="CoinNum" type="Sprite2D" parent="."]
position = Vector2(576, 48)
scale = Vector2(0.0906249, 0.0906249)
texture = ExtResource("5_o8rct")

[node name="itemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 103.0
offset_top = -29.5
offset_right = 275.0
offset_bottom = -6.5
grow_vertical = 2
theme = ExtResource("6_fajgw")
text = "itemName"

[node name="itemDes" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = 4.5
offset_right = 393.0
offset_bottom = 21.5
grow_vertical = 2
theme = ExtResource("7_cp3gu")
text = "itemDes"

[node name="itemCost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -31.5
offset_right = -26.0
offset_bottom = 28.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_exla2")
text = "10"
